--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     Hello! I am a frontend web developer with a creative approach to problem-solving and a constant eagerness to learn. My previous experience in finance and the banking sector, as well as entrepreneurship, has provided me with a unique perspective. The combination of my professional background in finance and marketing with new skills in web development allows me to take comprehensive approaches to problem-solving. I am ready for new challenges and continually refine my frontend development skills. Let's create something amazing together!
                 </p>
                 <p class="resume">
-                    <h2><a href="">My resume</a></h2>
+                    <h2><a href="https://ksushatarasenko.github.io/ksushatarasenko/">My resume >></a></h2>
                 </p>
             </section>
             <!-- My works -->
