--- a/Home Work/Home work 20 /index.html
+++ b/Home Work/Home work 20 /index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>My works - 20</h1>
+        <h1>My works - 7</h1>
         <div class="list">
             <a href="../../index.html">Home</a>
         </div>
@@ -32,8 +32,10 @@
             <img src="./images/rock,scissors,paper.png" alt="Rock, scissors, paper">
             <button><a href="./Камень/index2.html">PLAY</a></button>
         </div>
-        <div>
-            <a href="./game_3/index.html">Game 3</a>
+        <div class="rock-scissors-paper-home">
+            <span><h1>Игра <br> поймай мячик</h1></span>
+            <img src="./images/2023-12-07 08.36.55.jpg" alt="Rock, scissors, paper">
+            <button><a href="./game_3/index.html">PLAY</a></button>
         </div>
     </div>
     
